# thindx

./: .gitignore  Cargo.toml  Readme.md  Style.md  index.html  rust-toolchain.toml
dev/: Cargo.toml  _dev.rs  d3d9.rs  misc.rs  win32.rs
doc/: Cargo.toml  _doc.rs  cpp2rust.txt  cpp2url.txt  device_ext.rs  direct3d_ext.rs  style.css
thin3d9/doc/: Cargo.toml
thindx/: Cargo.toml  Readme.md  build.rs  d3d9.natvis  errors.natvis  guid.natvis  thindx.natvis
thindx-d3d11shader/: Cargo.toml
thindx-d3d11shader/src/: _thindx_d3d11shader.rs
thindx-d3d11shader/src/flags/: shader_requires.rs
thindx-d3d11shader/src/structures/: function_desc.rs  library_desc.rs  parameter_desc.rs  shader_buffer_desc.rs  shader_desc.rs  shader_input_bind_desc.rs  shader_type_desc.rs  shader_variable_desc.rs  signature_parameter_desc.rs
thindx-d3dcompiler/: Cargo.toml
thindx-d3dcompiler/src/: _thindx_d3dcompiler.rs
thindx-d3dcompiler/src/flags/: compile.rs  compile_effect.rs  get_inst_offsets.rs
thindx-zzz-internal-proc-macros/: Cargo.toml  internal-proc-macros.rs
thindx/doc/: changelog.md  cpp2ignore.txt  cpp2rust.txt  cpp2url.txt  cpp2url.xaudio2.md  cpp2url.xinput.md  dependencies.md  headers-directx-sdk.txt  headers.txt  style.css  style.md
thindx/examples/: d3d9-00-clear-winit.rs  d3d9-01-clear-winapi.rs  d3d9-02-xinput.rs  d3dcompiler-01-construction.rs  d3dcompiler-02-compile.rs  d3dcompiler-03-link.rs  d3dcompiler-04-reflect-shader.rs  d3dcompiler-04-reflection.rs  d3dcompiler-05-disassemble.rs  d3dcompiler-05-reflect-library.rs  xinput-exercise-all.rs
thindx/src/: _examples.rs  _headers.rs  _lib.rs  _thindx.rs  abi_cstr.rs  dll.rs  error.rs  error_kind.rs  error_macros.rs  error_with_blob.rs  errors.rs  extra.rs  macros.rs  method_error.rs  method_error_blob.rs
thindx/src/ctypes/: _ctypes.rs  abi_cstr.rs  pack.rs  try_into_as_cstr.rs
thindx/src/headers/_misc/: cpp2url.md
thindx/src/headers/d3d11shader.h/: cpp2url.md  d3d11shader.rs
thindx/src/headers/d3d11shader.h/enumerations/: shader_version_type.rs
thindx/src/headers/d3d11shader.h/interfaces/: function_linking_graph.rs  function_parameter_reflection.rs  function_reflection.rs  library_reflection.rs  linker.rs  linking_node.rs  module.rs  module_instance.rs  shader_reflection.rs  shader_reflection_constant_buffer.rs  shader_reflection_type.rs  shader_reflection_variable.rs
thindx/src/headers/d3d11shader.h/structures/: function_desc.rs  library_desc.rs  parameter_desc.rs  shader_buffer_desc.rs  shader_desc.rs  shader_input_bind_desc.rs  shader_type_desc.rs  shader_variable_desc.rs  signature_parameter_desc.rs
thindx/src/headers/d3d9.h/: cpp2url.md  d3d9.rs
thindx/src/headers/d3d9.h/flags/: cursor.rs
thindx/src/headers/d3d9.h/functions/: perf.rs
thindx/src/headers/d3d9.h/interfaces/: buffers.rs  device.rs  device_draw.rs  device_misc.rs  deviceex.rs  direct3d.rs  direct3dex.rs  query.rs  resource.rs  shaders.rs  state_block.rs  surface.rs  swap_chain.rs  swap_chain_ex.rs  texture.rs  vertex_declaration.rs  volume.rs
thindx/src/headers/d3d9.h/wrappers/: safe_device.rs
thindx/src/headers/d3d9caps.h/: cpp2url.md  d3d9caps.rs
thindx/src/headers/d3d9caps.h/flags/: caps1.rs  caps2.rs  caps3.rs  cursor_caps.rs  dev_caps.rs  dev_caps2.rs  dt_caps.rs  fvf_caps.rs  line_caps.rs  pblend_caps.rs  pcmp_caps.rs  pmisc_caps.rs  praster_caps.rs  ps20_caps.rs  pshade_caps.rs  ptaddress_caps.rs  ptexture_caps.rs  ptfilter_caps.rs  stencil_caps.rs  texop_caps.rs  vs20_caps.rs  vtxp_caps.rs
thindx/src/headers/d3d9caps.h/structures/: caps.rs
thindx/src/headers/d3d9types.h/: cpp2url.md  d3d9types.rs
thindx/src/headers/d3d9types.h/enumerations/: back_buffer_type.rs  basis_type.rs  blend.rs  blend_op.rs  cmp_func.rs  compose_rects_op.rs  cube_map_faces.rs  cull.rs  debug_monitor_tokens.rs  decl_method.rs  decl_type.rs  decl_usage.rs  degree.rs  devtype.rs  display_rotation.rs  fill_mode.rs  fog_mode.rs  format.rs  light_type.rs  material_color_source.rs  multi_sample_type.rs  patch_edge_style.rs  pool.rs  primitive_type.rs  query_type.rs  render_state_type.rs  resource_type.rs  sampler_state_type.rs  sampler_state_value.rs  sampler_texture_type.rs  scanline_ordering.rs  sgr.rs  shade_mode.rs  state_block_type.rs  stencil_op.rs  stream_source.rs  swap_effect.rs  texture_address.rs  texture_filter_type.rs  texture_op.rs  (+3 more)
thindx/src/headers/d3d9types.h/flags/: create.rs  fvf.rs  get_data.rs  issue.rs  lock.rs  present.rs  present_flag.rs  usage.rs
thindx/src/headers/d3d9types.h/macros/: makefourcc.rs
thindx/src/headers/d3d9types.h/structures/: adapter_identifier.rs  box_.rs  caps.rs  clip_status.rs  color_value.rs  device_creation_parameters.rs  display_mode.rs  display_mode_ex.rs  display_mode_filter.rs  gamma_ramp.rs  index_buffer_desc.rs  light.rs  locked_box.rs  locked_rect.rs  material.rs  (+13 more)
thindx/src/headers/d3dcommon.h/: cpp2url.md  d3dcommon.rs
thindx/src/headers/d3dcompiler.h/: cpp2url.md  d3dcompiler.rs
thindx/src/headers/d3dx9tex.h/: cpp2url.md  d3dx9tex.rs  ffi.txt
thindx/src/headers/guiddef.h/: guiddef.rs
thindx/src/headers/processthreadsapi.h/: cpp2url.md  processthreadsapi.rs
thindx/src/headers/unknwn.h/: cpp2url.md  unknwn.rs
thindx/src/headers/winuser.h/: cpp2url.md  winuser.rs
thindx/src/headers/xaudio2.h/: cpp2ignore.txt
thindx/src/headers/xinput.h/: xinput.rs
thindx/src/namespaces/: _root.rs  d3d.rs  d3d11.rs  d3d9-interface-tree.md  d3d9.rs  d3dx9.rs  win32.rs  wkpdid.rs  xaudio2.rs  xinput.rs
thindx/src/namespaces/d3d9/: index.rs  shared_handle.rs  texture_format.rs  texture_mip_ref.rs
thindx/src/traits/: _traits.rs  as_hwnd.rs  as_safe.rs  into_range_or_full.rs  parent_or_phantom.rs  path_ext.rs  raw.rs  shared_handle.rs  try_into_as_cstr.rs
thindx/test/data/: basic.hlsl  include-chain-1.hlsl  include-chain-2.hlsl  include-chain-3.hlsl  library.hlsl  plain.txt
thindx/tests/: fuzz-d3d9.rs  fuzz-xinput.rs
xtask/: Cargo.toml  _macros.rs  _xtask.rs  browser.rs  coverage.rs  crlf.rs  doc.rs  examples.rs  headers.rs  natvis.rs  pages.rs  publish.rs  scan.rs  source.rs  vsc.rs
(+7514 files in other folders)
