# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name            = "dev"
version         = "0.0.0"
publish         = false
edition         = "2018"
description     = "Internal utility crate for thindx doc comments and unit tests"

[lib]
path            = "_dev.rs"

[features]
9ex             = []

[target.'cfg(windows)'.dependencies]
png             = "0.17"
thindx.path     = "../thindx"
winapi.version  = "0.3"
winapi.features = [
    # shared
    "d3d9caps",
    "d3d9types",
    "windef",

    # um
    "debugapi",
    "libloaderapi",
    "wincon",
    "winuser",
]
