# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name            = "thindx-zzz-internal-proc-macros"
version         = "0.0.0-git"
authors         = ["MaulingMonkey <git@maulingmonkey.com>"]
edition         = "2018"
repository      = "https://github.com/MaulingMonkey/thindx"
license         = "Apache-2.0 OR MIT"
description     = "Internal proc macros for ThinDX"

[lib]
path            = "internal-proc-macros.rs"
proc-macro      = true
