# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name            = "thindx"
version         = "0.0.0-git"
authors         = ["MaulingMonkey <git@maulingmonkey.com>"]
edition         = "2018"
repository      = "https://github.com/MaulingMonkey/thindx"
documentation   = "https://docs.rs/thindx"
license         = "Apache-2.0 OR MIT"
readme          = "Readme.md"
description     = "Thin DirectX wrappers"
keywords        = ["directx", "direct3d", "d3d", "d3dcompiler", "hlsl"]
categories      = ["api-bindings", "graphics", "os::windows-apis", "rendering::graphics-api"]
exclude         = [".vscode"]

[package.metadata.docs.rs]
default-target  = "x86_64-pc-windows-msvc"
targets         = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]
all-features    = true
rustdoc-args    = ["--extend-css", "doc/style.css"]

[lib]
path            = "src/_lib.rs"

[features]
default         = []
9ex             = []
# extra               = []
# impl-poor-defaults  = []
# impl-from-unchecked = []



[target.'cfg(windows)'.dependencies]
abibool         = "0.5"
abistr          = "0.2.0-rc1"
#abistr          = { git = "https://github.com/MaulingMonkey/abistr", rev = "1f4d6e40c7d430d586fe81eca46f9e64d569aaca" }
void            = "=1.0.2"
minidl          = "0.1.2"
mcom            = "0.1.1"
#mcom            = { git = "https://github.com/MaulingMonkey/mcom" }
winapi.version  = "0.3.9"
winapi.features = [
    # shared
    "d3d9",
    "d3d9caps",
    "d3d9types",
    "d3dcompiler",
    "guiddef",
    "ntdef",
    "windef",
    "winerror",

    # um
    "libloaderapi",
    "unknwnbase",
    "windef",
    "winuser",
]

[target.'cfg(windows)'.dev-dependencies]
doc.path            = "../doc"
lazy_static         = "1.4"
raw-window-handle   = "0.3"
winit               = "0.23"
winapi.version      = "0.3.9"
winapi.features = [
    # shared
    "minwindef",
    "windef",

    # um
    "debugapi",
    "libloaderapi",
    "winuser",
]
