# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name            = "thindx"
version         = "0.0.0-git"
authors         = ["MaulingMonkey <git@maulingmonkey.com>"]
edition         = "2018"
repository      = "https://github.com/MaulingMonkey/thindx"
documentation   = "https://docs.rs/thindx"
license         = "Apache-2.0 OR MIT"
readme          = "Readme.md"
description     = "Thin DirectX wrappers"
keywords        = ["directx", "direct3d", "d3d", "d3dcompiler", "hlsl"]
categories      = ["api-bindings", "graphics", "os::windows-apis", "rendering::graphics-api"]

include         = [
    "doc/changelog.md",
    # "examples/*.rs",  # broken without dev
    "src/**",
    # "test/data/*",    # broken without dev
    "build.rs",
    "Readme.md",
    "LICENSE*",
]

[package.metadata.docs.rs]
default-target  = "x86_64-pc-windows-msvc"
targets         = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]
all-features    = true

[lib]
path            = "src/_lib.rs"

[features]
default         = []
9ex             = []
# extra               = []
# impl-from-unchecked = []



[target.'cfg(windows)'.dependencies]
abibool.version = "0.5"
abibool.features=["bytemuck"]
abistr.version  = "0.2.0-rc1"
abistr.features = ["bytemuck"]
#abistr          = { git = "https://github.com/MaulingMonkey/abistr", rev = "1f4d6e40c7d430d586fe81eca46f9e64d569aaca" }
bytemuck.version    = "1"
bytemuck.features   = ["derive"]
lazy_static     = "1.4"
minidl          = "0.1.3"
#minidl.git      = "https://github.com/MaulingMonkey/minidl"
#minidl.rev      = "e1e86cb7a6e48a3ed1aff4a1e927311d90039e82"
mcom            = "0.1.1"
#mcom            = { git = "https://github.com/MaulingMonkey/mcom" }
winapi.version  = "0.3.9"
winapi.features = [
    # shared
    "d3d9",
    "d3d9caps",
    "d3d9types",
    "d3dcompiler",
    "guiddef",
    "ntdef",
    "windef",
    "winerror",

    # um
    "libloaderapi",
    "unknwnbase",
    "windef",
    "winuser",
]

[target.'cfg(windows)'.dev-dependencies]
bugsalot            = "0.2"
dev.path            = "../dev"
mmrbi               = "0.0.17"
png                 = "0.17"
raw-window-handle   = "0.4"
winit               = "0.26"
winapi.version      = "0.3.9"
winapi.features = [
    # shared
    "minwindef",
    "windef",

    # um
    "debugapi",
    "libloaderapi",
    "psapi",
    "winuser",
    "xinput",
]
