# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name                                    = "thindx"
version                                 = "0.0.0-git"
authors                                 = ["MaulingMonkey <git@maulingmonkey.com>"]
edition                                 = "2021"
repository                              = "https://github.com/MaulingMonkey/thindx"
documentation                           = "https://docs.rs/thindx"
license                                 = "Apache-2.0 OR MIT"
readme                                  = "Readme.md"
description                             = "Thin DirectX wrappers"
keywords                                = ["directx", "direct3d", "d3d", "d3dcompiler", "hlsl"]
categories                              = ["api-bindings", "graphics", "os::windows-apis", "rendering::graphics-api"]

include = [
    "doc/changelog.md",
    # "examples/*.rs",  # broken without dev
    "src/**",
    # "test/data/*",    # broken without dev
    "build.rs",
    "Readme.md",
    "LICENSE*",
]

[package.metadata.docs.rs]
default-target                          = "x86_64-pc-windows-msvc"
targets                                 = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]
all-features                            = true

[lib]
path                                    = "src/_lib.rs"

[features]
default                                 = []
9ex                                     = []
# extra                                   = []
# impl-from-unchecked                     = []



[target.'cfg(windows)'.dependencies]
abibool.version                         = "0.5"
abistr.version                          = "0.2.0-rc1"
#abistr.git                              = "https://github.com/MaulingMonkey/abistr"
#abistr.rev                              = "1f4d6e40c7d430d586fe81eca46f9e64d569aaca"
bytemuck.version                        = "1"
lazy_static                             = "1.4"
minidl                                  = "0.1.3"
#minidl.git                              = "https://github.com/MaulingMonkey/minidl"
#minidl.rev                              = "e1e86cb7a6e48a3ed1aff4a1e927311d90039e82"
mcom                                    = "0.1.1"
#mcom                                    = { git = "https://github.com/MaulingMonkey/mcom" }
winapi.version                          = "0.3.9"
#winresult.version                       = "0.1.2"
winresult.git                           = "https://github.com/MaulingMonkey/winresult"
winresult.rev                           = "9b877bf59efd8cc89fae4fd5f791a0e51cc53712"
#winresult.path                          = "../../winresult/crates/winresult"

abibool.features                        = ["bytemuck"]
abistr.features                         = ["bytemuck"]
bytemuck.features                       = ["derive"]
winapi.features = [
    # shared
    "d3d9",
    "d3d9caps",
    "d3d9types",
    "d3dcompiler",
    "guiddef",
    "minwindef",
    "ntdef",
    "windef",
    "winerror",

    # um
    "libloaderapi",
    "processthreadsapi",
    "psapi",
    "unknwnbase",
    "windef",
    "winnt",
    "winuser",
    "xinput",
]

[target.'cfg(windows)'.dev-dependencies]
bugsalot                                = "0.2"
dev.path                                = "../dev"
mmrbi                                   = "0.0.19"
png                                     = "0.17"
raw-window-handle                       = "0.5"
winit                                   = "0.27"
winapi.version                          = "0.3.9"

winapi.features = [
    # um
    "debugapi",
]
