# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name            = "xtask"
description     = "build utilities"
version         = "0.0.0-git"
authors         = ["MaulingMonkey <git@maulingmonkey.com>"]
edition         = "2018"
publish         = false
license         = "Apache-2.0 OR MIT"

[[bin]]
name            = "xtask"
path            = "_xtask.rs"

[dependencies]
#mmrbi           = "0.0.11"
mmrbi           = { git = "https://github.com/MaulingMonkey/mmrbi", rev = "fab504f3ee446348341431e78bdc0bf63303fc2c" }
