# https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["."] # problems arise w/ xtasks belonging to the workspace they're building

[package]
name            = "xtask"
description     = "build utilities"
version         = "0.0.0"
authors         = ["MaulingMonkey <git@maulingmonkey.com>"]
edition         = "2021"
publish         = false
license         = "Apache-2.0 OR MIT"

[[bin]]
name            = "xtask"
path            = "_xtask.rs"

[dependencies]
base64          = "0.13"
lazy_static     = "1"
maulingmonkey-windows-sdk-scanner.git = "https://github.com/MaulingMonkey/windows-sdk-scanner"
mmrbi           = "0.0.19"
# mmrbi           = { git = "https://github.com/MaulingMonkey/mmrbi", rev = "1e27c41be24a4cb5ae31dd6388dba08a2af9e02b" }
proc-macro2.version = "1"
rustc-demangle  = "0.1"
syn.version     = "1"

proc-macro2.features = [
    "span-locations"
]
syn.features = [
    "extra-traits",
    "full",
]
