# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name            = "doc"
description     = "documentation support - note that this crate marks Direct3D/Device creation safe, which isn't 100% sound"
version         = "0.0.0-git"
authors         = ["MaulingMonkey <git@maulingmonkey.com>"]
edition         = "2018"
publish         = false
license         = "Apache-2.0 OR MIT"

[lib]
path            = "_doc.rs"



[target.'cfg(windows)'.dependencies]
thin3d9         = { path = "..", features = ["extra"] }
